Refactor MorphingSVG component; migrate from TypeScript to JavaScript; enhance animation handling and cleanup logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "Component/Elements.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "Component/Elements.jsx", "Component/ui/MorphingSvg.jsx"],
   "exclude": ["node_modules"]
 }
